spade-tests/src/snapshots/spade_tests__typeinference__type_pattern_argument_type_mismatch_positional.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {
    b: bool,
}

entity main() -> bool {
    let x = X$(b: true);
    match x {
        X(0) => true,
        _ => false,
    }
}


error: Argument type mismatch. Expected bool got Number<#uint>
  ┌─ testinput:8:11
  │
2 │     b: bool,
  │        ---- Type bool inferred here
  ·
8 │         X(0) => true,
  │           ^ expected bool
  │
  = note: Expected: bool
               Got: Number<_>
